# SimpleOS

./: .env.example  .gitattributes  .gitignore  .navigator_config.json  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_DETECTOR.md  ARCHITECTURE_DIAGRAM.md  BUILDING.md  C_CPP_UI_FRAMEWORK_README.md  DELIVERY_SUMMARY.md  EXECUTIVE_SUMMARY.md  GET_STARTED.md  INDEX.md  Makefile  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  PROJECT_SUMMARY_ARCH_DETECTOR.md  QUICKSTART.md  QUICKSTART_ARCH_DETECTOR.md  README.md  README_FIRST.txt  SIMPLEOS-SKILL.md  START_HERE.md  SUMMARY.md  UI_FRAMEWORK_COMPLETE.md  WINDOWS_SETUP.md  arch_detector.py  arch_detector_module.py  build.ps1  composer.json  errno.h  examples_arch_detector.py  fraction.js  generate_single_library.py  git-push(1).html  github-command.bat  github-commands.bat  navigator.py  notlar.bat  (+19 more)
.bin/: run.bat  simple.h
docs/: CHROMIUM_ARCHITECTURE.md  CHROMIUM_SETUP.md  SETUP_GUIDE.md  chromium_app.js  config.json  docs.html  docs.json  docsservices.php  electron_config.json  electron_main.js  google_docs_integration.php  google_integration.php  index.html  package.json  platform_services.php  preload.js  script.js  simpleos_docs_viewer.py  style.css
free-claude-code.worktrees/: composer.json
google documantation/: REAMDE.md  docs.php  google_docs_prototype.html  googledocs.html  script.js  styles.css
include/: README.md  config.h  venv_demo.py  venv_helper.c
include/system/: CMakeLists.txt  README.md  build_system.ps1  build_system.sh  system.cpp  system.h  system_x64.cpp  system_x86.cpp
kernel/: KernelArayuz.hpp  Makefile  (+7 more)
(+212 files in other folders)
